--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
         "dev": "webpack serve --mode=development"
     },
     "dependencies": {
+        "bootstrap": "^5.1.3",
+        "jq-accordion": "^1.0.3",
+        "jQuery": "^1.7.4",
+        "jquery-ui": "^1.13.1",
         "mini-css-extract-plugin": "^2.5.3",
         "redom": "^3.27.1"
     }
