--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     },
     "dependencies": {
         "bootstrap": "^5.1.3",
+        "cordova-plugin-unique-device-id2": "^2.0.0",
+        "cordova-unique-device-id": "^1.3.2",
+        "dotenv": "^16.0.0",
         "jq-accordion": "^1.0.3",
         "jQuery": "^1.7.4",
         "jquery-ui": "^1.13.1",
